<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#F3E8E3"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/lyman_hansel_gerona_tvcdj_ffvx8_unsplash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/usernameLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/username"
            android:hint="@string/hintText"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/passwordLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:text="@string/loginButtonName"
        android:layout_height="wrap_content"/>

</LinearLayout>